<resources>

    <string name="app_name_en">Digikala</string>
    <string name="app_name_fa">دیجی کالا</string>


    // Persian

    <string name="home_page">خانه</string>
    <string name="category">لیست دسته بندی محصولات</string>

    <string name="cart">سبد خرید</string>

    <string name="offers">محصولات پیشنهادی</string>
    <string name="best_sellers">پرفروشترین ها</string>
    <string name="most_views">پربازدیدترین ها</string>
    <string name="newests">جدیدترین ها</string>

    <string name="setting">تنظیمات</string>
    <string name="faq">سوالات متداول</string>
    <string name="about_us">درباره ما</string>


    <string name="add_to_cart">اضافه کردن به سبد خرید</string>

    <string name="tomans">تومان</string>
    <string name="product_name">نام محصول : </string>
    <string name="product_detail">مشخصات</string>
    <string name="product_comments">نظرات کاربران</string>
    <string name="more_detail">ادامه مطلب</string>
    <string name="sell_by">فروش توسط</string>
    <string name="ready_for_send_storage">آماده ارسال از انبار دیجی کالا</string>
    <string name="product_garanty">گارانتی ۱۸ ماهه دیجی کالا</string>


    <string name="whole_list">لیست کامل</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">خطا در اتصال به اینترنت !</string>
    <string name="retry">تلاش مجدد</string>


    <string name="test">

        جدیدترین گوشی سری Y با مدل «Y7 Prime 2018 Dual SIM» از برند «هوآوی» با نمایشگری 5.9اینچی از نوع LCD در گروه فبلت‌ها دسته‌بندی می‌شود. نمایشگر 5.9اینچی و حافظه‌ی داخلی 32گیگابایتی از ویژگی‌های خوب این سری از گوشی‌هاست. همان‌طورکه‌ می‌دانید با گذشت زمان شرکت‌های مطرح و نام‌آشنای تولیدکننده‌ی کالای دیجیتال در تولید گوشی‌های موبایل با نمایشگر بزرگ، گوی سبقت را از یکدیگر ربوده‌اند. امروزه ابعاد صفحه‌نمایش به یکی از اولویت‌های افراد در خرید گوشی موبایل تبدیل شده است. همین امر به تولید محصولاتی با عنوان فبلت منجر شد که از نظر قدوقواره از گوشی‌های موبایل بزرگ‌تر و از تبلت‌ها کوچک‌تر هستند. وای ۷ پرایم ۲۰۱۸ به یک نمایشگر بزرگ 5.9اینچی با فناوری FullView مجهز شده است که وضوح تصویر 1440×720 پیکسل را به نمایش می‌‌کشد. با توجه به رزولوشنی که این نمایشگر دارد، تراکم پیکسلی 273 پیکسل در هر اینچ برای آن به‌دست می‌آید.

سخت‌افزار این فبلت را تراشه‌‌ی Qualcomm MSM8937 Snapdragon 430، یک پردازنده‌ی هشت‌‌هسته‌ای و پردازنده‌‌ی گرافیکی Adreno 505 تشکیل می‌دهد. برای این دستگاه 3 گیگابایت حافظه‌ی رم و 32 گیگابایت حافظه‌ی داخلی در نظر گفته شده که توسط کارت حافظه‌ی microSD تا 256 گیگابایت قابل ‌افزایش است. شرکت هوآوی، این میزان ظرفیت و فضای حافظه‌ی داخلی را برای پاسخ به نیاز کاربرانی در نظر گرفته است که همواره فایل‌های صوتی و تصویری فراوانی برای ذخیره‌سازی در گوشی موبایل خود دارند. وجود دو سنسور با دقت 13 و 2 مگاپیکسل به‌عنوان دوربین‌های اصلی این گوشی موبایل، امکان ثبت تصاویر با رزولوشن بسیار زیاد را فراهم کرده‌اند؛ همچنین دوربین سلفی در وای ۷ پرایم ۲۰۱۸ به سنسوری 8مگاپیکسلی مجهز شده است که توانایی رقابت با بسیاری از محصولات موجود در بازار را دارد.

 با استفاده از این دو دوربین و امکانات مختلف آن‌ها مانند قابلیت تشخیص چهره (Face Detection)، قابلیت فوکوس با اشاره روی سوژه (Touch Focus)، قابلیت ثبت موقعیت جغرافیایی عکس‌ها و فیلم‌ها (Geo-Tagging)، قابلیت عکاسی پانوراما و عکاسی HDR، می‌توانید تصاویر جذابی ثبت کنید و از داشتن آن‌ها در گوشی موبایل خود لذت ببرید. در این محصول، نسخه‌ی 8 اندروید در قالب سیستم‌عامل به‌همراه رابط کاربری EMUI 8.0، ایفای نقش می‌کند و با ارائه‌ی امکانات کامل اندروید به کاربران، تجربه‌ی کاربری بهتری را پیش روی آن‌ها قرار می‌دهد. درنهایت باید به باتری این گوشی اشاره کنیم. زیر قاب این گوشی، یک باتری لیتیوم-یونی با ظرفیت 3000 میلی‌آمپرساعت قرار گرفته است که کاربران قادر به تعویض آن نیستند.

 اگر امکاناتی که در بالا به آن‌ها پرداختیم، هنوز نتوانسته شما را تحت‌تأثیر قرار دهد، می‌توانید پشتیبانی از دو سیم‌کارت، پشتیبانی از اینترنت پرسرعت 4G و برخورداری از حسگر اثرانگشت را به لیست فوق اضافه کنید. درصورتی‌که شما نیز در دسته‌ی افرادی قرار دارید که داشتن گوشی موبایل با صفحه‌نمایش بزرگ برایشان حائز اهمیت است، وای ۷ پرایم ۲۰۱۸ را برای خرید انتخاب کنید.

    </string>
    <string name="search_hint">جستجو در دیجی کالا... </string>
    <string name="sort">مرتب سازی</string>
    <string name="filter">فیلتر کردن</string>
    <string name="price_descending">قیمت از زیاد به کم</string>
    <string name="price_ascending">قیمت از کم به زیاد</string>
    <string name="commit_card">خرید خود را نهایی کنید</string>
    <string name="card_sum">جمع کل خرید</string>
    <string name="delete">حذف</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="count">تعداد</string>
    <string name="color">رنگ</string>
    <string name="desscription">توضیحات</string>
    <string name="title">عنوان</string>
    <string name="no_mode">بدون ترتیب</string>
    <string name="filter_default">رنگ، نوع، قیمت ...</string>
    <string name="fiter_product">فیلتر کردن محصولات</string>
    <string name="size">سایز</string>
    <string name="press_again_for_exit">برای خروج دوباره فشار دهید</string>
    <string name="login_register">ورود و ثبت نام</string>

</resources>
