<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
    </group>

    <group android:id="@+id/group_12"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_shopping_cart_dark"
            android:title="@string/cart" />
    </group>


    <group android:id="@+id/group_2">
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_star"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_newest"
            android:icon="@drawable/ic_star"
            android:title="@string/newests" />

        <item
            android:id="@+id/nav_most_view"
            android:icon="@drawable/ic_star"
            android:title="@string/most_views" />

        <item
            android:id="@+id/nav_best_seller"
            android:icon="@drawable/ic_star"
            android:title="@string/best_sellers" />
    </group>


    <group android:id="@+id/grou2p_2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help"
            android:title="@string/faq" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_phone"
            android:title="@string/about_us" />

    </group>

</menu>