<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="productViewModel"
            type="com.mag.digikala.viewmodel.ProductViewModelNew" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/digikala_dark_white"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/digikala_red">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/product_detail_activity__view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager.widget.ViewPager>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="52dp"
                        android:layout_height="60dp"
                        app:backgroundTint="@color/nothing"
                        app:cornerRadius="30dp"
                        app:icon="@drawable/ic_share"
                        app:iconSize="20dp"
                        app:iconTint="@color/digikala_light_gray"
                        app:rippleColor="@android:color/darker_gray" />

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="52dp"
                        android:layout_height="60dp"
                        app:backgroundTint="@color/nothing"
                        app:cornerRadius="30dp"
                        app:icon="@drawable/ic_like"
                        app:iconSize="20dp"
                        app:iconTint="@color/digikala_light_gray"
                        app:rippleColor="@android:color/darker_gray" />

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="52dp"
                        android:layout_height="60dp"
                        app:backgroundTint="@color/nothing"
                        app:cornerRadius="30dp"
                        app:icon="@drawable/ic_alarm"
                        app:iconSize="20dp"
                        app:iconTint="@color/digikala_light_gray"
                        app:rippleColor="@android:color/darker_gray" />

                </LinearLayout>

                <TextView
                    android:id="@+id/product_detail_fragment__product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/far_roya_bd"
                    android:gravity="right"
                    android:text='@{productViewModel.product == null ?  "" : productViewModel.title}'
                    android:textSize="16dp" />


                <TextView
                    android:id="@+id/product_detail_fragment__product_short_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/iran_yekan"
                    android:gravity="right"
                    android:text='@{productViewModel.product == null ?  "" : productViewModel.shortDescription}'
                    android:textColor="@color/digikala_gray"
                    android:textSize="12dp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/far_trafc_bd"
                android:text="@string/product_comments"
                android:textColor="@color/digikala_dark_blue_gray"
                android:textSize="10dp"
                app:backgroundTint="@color/digikala_raw_white"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_comment"
                app:iconGravity="textStart"
                app:iconSize="20dp"
                app:iconTint="@color/digikala_blue_gray"
                app:rippleColor="@android:color/darker_gray" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/far_trafc_bd"
                android:text="@string/product_detail"
                android:textColor="@color/digikala_dark_blue_gray"
                android:textSize="10dp"
                app:backgroundTint="@color/digikala_raw_white"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_detail"
                app:iconGravity="textStart"
                app:iconSize="20dp"
                app:iconTint="@color/digikala_blue_gray"
                app:rippleColor="@android:color/darker_gray" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/product_detail_fragment__color_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:textDirection="rtl" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/color"
                        android:textSize="12dp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/product_detail_fragment__size_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/size"
                        android:textSize="12dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_detail_activity__product_name8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/product_garanty"
                        android:textSize="10dp" />

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/checked_sheild" />

                </LinearLayout>


                <View
                    android:id="@+id/navigation_layout__devider01"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="?android:attr/listDivider" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_detail_activity__product_name5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/app_name_fa"
                        android:textColor="@color/digikala_red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/product_detail_activity__product_name7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/sell_by"
                        android:textSize="10dp" />

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:fontFamily="@font/iran_yekan"
                        android:src="@drawable/short_logo" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_detail_activity__product_name4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/ready_for_send_storage"
                        android:textSize="10dp" />

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/truck" />

                </LinearLayout>

                <View
                    android:id="@+id/navigation_layout__devider02"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_detail_fragment__product_sale_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:fontFamily="@font/far_trafc_bd"
                        android:gravity="left"
                        android:text='@{productViewModel.product == null ?  "" : productViewModel.regularPrice}'
                        android:textColor="@color/digikala_green"
                        android:textSize="17dp" />


                    <TextView
                        android:id="@+id/product_detail_fragment__product_regular_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/far_trafc_bd"
                        android:gravity="left"
                        android:text='@{productViewModel.product == null ?  "" : productViewModel.salesPrice}'
                        android:textColor="@color/digikala_red"
                        android:textSize="14dp" />


                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/product_detail_fragment__card_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/iran_yekan"
                    android:text="@string/add_to_cart"
                    app:backgroundTint="@color/digikala_green"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_add_cart"
                    app:iconSize="22dp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/product_detail_fragment__product_long_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/iran_yekan"
                    android:lineSpacingExtra="4dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="4dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="4dp"
                    android:text='@{productViewModel.product == null ? "" : productViewModel.description}'
                    android:textColor="#C9464646"
                    android:textSize="10dp" />

                <View
                    android:id="@+id/navigation_layout__devider03"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/product_detail_activity__product_name6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/iran_yekan"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/more_detail"
                    android:textColor="@color/digikala_gray"
                    android:textSize="10dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</layout>